--- a/index.html
+++ b/index.html
@@ -2,136 +2,168 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Профиль</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
-    :root{
+    :root {
       --bg1: #0f1724;
       --accent1: #6ee7b7;
       --accent2: #60a5fa;
       --accent3: #f472b6;
       --glow: 0 10px 30px rgba(96,165,250,0.12);
+      --card-radius: 20px;
+      --transition: all 0.3s ease;
       font-family: 'Inter', sans-serif;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
-    html,body{height:100%}
-    body{
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+    }
+
+    body {
       background: radial-gradient(1200px 600px at 10% 10%, rgba(96,165,250,0.08), transparent),
                   radial-gradient(900px 400px at 90% 90%, rgba(244,114,182,0.06), transparent),
                   var(--bg1);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:32px;
-      color:white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: clamp(12px, 4vw, 32px);
+      color: white;
     }
 
-    .card{
-      width:100%;
-      max-width:420px;
+    .card {
+      width: 100%;
+      max-width: 420px;
       background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border-radius:20px;
-      padding:28px;
+      border-radius: var(--card-radius);
+      padding: clamp(18px, 4vw, 28px);
       box-shadow: var(--glow);
       backdrop-filter: blur(10px) saturate(1.2);
       border: 1px solid rgba(255,255,255,0.05);
-      position:relative;
+      position: relative;
+      transition: var(--transition);
     }
 
-    .accent-bar{
-      position:absolute;
-      left:-60px; top:-60px; right:-60px; height:160px;
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 20px 50px rgba(96,165,250,0.25);
+    }
+
+    .accent-bar {
+      position: absolute;
+      left: -60px;
+      top: -60px;
+      right: -60px;
+      height: 160px;
       background: linear-gradient(90deg, rgba(110,231,183,0.08), rgba(96,165,250,0.08), rgba(244,114,182,0.08));
       transform: rotate(-6deg);
       filter: blur(30px);
-      border-radius:18px;
-      pointer-events:none;
+      border-radius: 18px;
+      pointer-events: none;
     }
 
-    .main{
-      display:flex;
-      gap:18px;
-      align-items:center;
-      flex-direction:column;
-      text-align:center;
+    .main {
+      display: flex;
+      gap: 18px;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
     }
 
-    .avatar-wrap{
-      width:140px; height:140px; min-width:140px;
-      display:grid; place-items:center;
-      border-radius:50%;
-      padding:6px;
+    .avatar-wrap {
+      width: clamp(80px, 20vw, 140px);
+      height: clamp(80px, 20vw, 140px);
+      display: grid;
+      place-items: center;
+      border-radius: 50%;
+      padding: 6px;
       background: linear-gradient(135deg, var(--accent1), var(--accent2));
       box-shadow: 0 8px 30px rgba(0,0,0,0.6);
-      transition: transform .35s, box-shadow .35s;
-    }
-    .avatar-wrap:hover{ transform: translateY(-6px) scale(1.05); box-shadow: 0 18px 40px rgba(96,165,250,0.2);} 
-    .avatar{
-      width:100%; height:100%; border-radius:50%; display:block; object-fit:cover;
-      border:6px solid rgba(255,255,255,0.06);
+      transition: var(--transition);
     }
 
-    .name{font-size:24px; font-weight:800; margin-top:12px;}
-
-    .social{
-      display:flex; gap:14px; margin-top:18px; justify-content:center;
-      flex-wrap:wrap;
+    .avatar-wrap:hover {
+      transform: translateY(-6px) scale(1.05);
+      box-shadow: 0 18px 40px rgba(96,165,250,0.2);
     }
-    .social a{
-      display:inline-grid; place-items:center; width:48px; height:48px; border-radius:14px;
+
+    .avatar {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      display: block;
+      object-fit: cover;
+      border: 6px solid rgba(255,255,255,0.06);
+    }
+
+    .name {
+      font-size: clamp(18px, 2.5vw, 26px);
+      font-weight: 800;
+      margin-top: 12px;
+    }
+
+    .social {
+      display: flex;
+      gap: 14px;
+      margin-top: 18px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .social a {
+      display: inline-grid;
+      place-items: center;
+      width: clamp(36px, 10vw, 48px);
+      height: clamp(36px, 10vw, 48px);
+      border-radius: 14px;
       background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border:1px solid rgba(255,255,255,0.06);
-      transition: transform .25s, box-shadow .25s;
+      border: 1px solid rgba(255,255,255,0.06);
+      transition: var(--transition);
     }
-    .social a:hover{ transform: translateY(-6px) scale(1.08); box-shadow: 0 14px 30px rgba(0,0,0,0.5); }
-    .social svg{ width:22px; height:22px; display:block; }
 
-    /* Медиазапросы для адаптива */
-    @media (max-width: 768px) {
-      .card{padding:22px;}
-      .avatar-wrap{width:120px;height:120px;}
-      .name{font-size:22px;}
-      .social a{width:44px;height:44px;}
+    .social a:hover {
+      transform: translateY(-6px) scale(1.08);
+      box-shadow: 0 14px 30px rgba(0,0,0,0.5);
+    }
+
+    .social img {
+      width: 50%;
+      height: 50%;
+      object-fit: contain;
     }
 
     @media (max-width: 480px) {
-      body{padding:16px;}
-      .card{padding:18px;}
-      .avatar-wrap{width:100px;height:100px;}
-      .name{font-size:20px;}
-      .social{gap:12px;}
-      .social a{width:40px;height:40px;}
+      .social {
+        gap: 10px;
+      }
     }
-
   </style>
 </head>
 <body>
   <div class="card" role="main">
     <div class="accent-bar" aria-hidden="true"></div>
-
     <div class="main">
       <div class="avatar-wrap">
         <img class="avatar" src="photo.jpg" alt="Моё фото">
       </div>
-
       <div class="name">medetzhan</div>
-
       <div class="social">
-        <!-- WhatsApp -->
         <a href="https://wa.me/77778631590" target="_blank" rel="noopener" aria-label="WhatsApp">
-          <img src="icons/whatsapp.png" alt="WhatsApp" width="24" height="24">
+          <img src="icons/whatsapp.png" alt="WhatsApp">
         </a>
-
-        <!-- Telegram -->
         <a href="https://t.me/medetzhan" target="_blank" rel="noopener" aria-label="Telegram">
-          <img src="icons/telegram.png" alt="WhatsApp" width="24" height="24">
+          <img src="icons/telegram.png" alt="Telegram">
         </a>
-
-        <!-- Instagram -->
         <a href="https://instagram.com/medetzhan" target="_blank" rel="noopener" aria-label="Instagram">
-          <img src="icons/instagram.png" alt="WhatsApp" width="24" height="24">
+          <img src="icons/instagram.png" alt="Instagram">
         </a>
       </div>
     </div>
