--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
 
     html, body {
       height: 100%;
+      width: 100%;
     }
 
     body {
-      background: radial-gradient(1200px 600px at 10% 10%, rgba(96,165,250,0.08), transparent),
-                  radial-gradient(900px 400px at 90% 90%, rgba(244,114,182,0.06), transparent),
-                  var(--bg1);
+      /* Новый фон — полностью покрывает экран */
+      background-color: var(--bg1);
+      background-image:
+        radial-gradient(circle at 15% 15%, rgba(96,165,250,0.12), transparent 60%),
+        radial-gradient(circle at 85% 85%, rgba(244,114,182,0.1), transparent 50%);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
       display: flex;
       align-items: center;
       justify-content: center;
